--- a/manifest.json
+++ b/manifest.json
@@ -19,9 +19,7 @@
   },
   "permissions": [
     "activeTab",
-    "scripting",
-    "storage",
-    "tabs"
+    "storage"
   ],
   "host_permissions": [
     "https://*/*",
